--- a/alpha_advantage.ipynb
+++ b/alpha_advantage.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ts = TimeSeries(key='35RWNNYNVVW23JS1', output_format='pandas')\n",
+    "ts = TimeSeries(key='<Put your API key here>', output_format='pandas')\n",
     "data, meta_data = ts.get_daily(symbol='BND', outputsize='compact')"
    ]
   },
