Removed my API key
Get you (free) API key here: https://www.alphavantage.co/

--- a/alpha_advantage.ipynb
+++ b/alpha_advantage.ipynb
@@ -34,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "ts = TimeSeries(key='<Put your API key here>', output_format='pandas')\n",
+    "# Get you (Free) API key here: https://www.alphavantage.co/\n",
+    "ts = TimeSeries(key='<Put you API key here>', output_format='pandas')\n",
     "data, meta_data = ts.get_daily(symbol='BND', outputsize='compact')"
    ]
   },
@@ -587,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
