--- a/upload_stock_data.ipynb
+++ b/upload_stock_data.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "from alpha_vantage.timeseries import TimeSeries\n",
     "# from sqlalchemy import create_engine\n",
-    "ts = TimeSeries(key='35RWNNYNVVW23JS1', output_format='pandas')"
+    "ts = TimeSeries(key='<Put API Key Here>', output_format='pandas')"
    ]
   },
   {
