Updated stock script.
Now uploads EFT stock data

--- a/upload_stock_data.ipynb
+++ b/upload_stock_data.ipynb
@@ -14,151 +14,48 @@
     "\n",
     "from alpha_vantage.timeseries import TimeSeries\n",
     "# from sqlalchemy import create_engine\n",
-    "ts = TimeSeries(key='<Put Your API Key Here>', output_format='pandas')"
+    "ts = TimeSeries(key='35RWNNYNVVW23JS1', output_format='pandas')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b003da16-f9e6-48d1-aac2-71364ac1c735",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2025-03-27 00:00:00')"
+       "Timestamp('2025-03-28 00:00:00')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data, meta_data = ts.get_daily(symbol='ET', outputsize='full')\n",
+    "ET, meta_data = ts.get_daily(symbol='ET', outputsize='full')\n",
     "# 🔹 Rename columns for clarity\n",
-    "data.columns = [\"Open\", \"High\", \"Low\", \"Close\", \"Volume\"]\n",
+    "ET.columns = [\"Open\", \"High\", \"Low\", \"Close\", \"Volume\"]\n",
     "\n",
     "# 🔹 Convert index to datetime format\n",
-    "data.index = pd.to_datetime(data.index)\n",
+    "ET.index = pd.to_datetime(ET.index)\n",
     "\n",
     "# 🔹 Convert index (date) into a regular column\n",
-    "data.reset_index(inplace=True)\n",
+    "ET.reset_index(inplace=True)\n",
     "\n",
     "# Calculate 100-day moving average for Close price\n",
-    "# data[\"100d_MA\"] = data[\"Close\"].rolling(window=100).mean()\n",
+    "ET[\"100d_MA\"] = ET[\"Close\"].rolling(window=100).mean()\n",
     "\n",
     "# 🔹 Rename the date column\n",
-    "data.rename(columns={\"date\": \"Date\"}, inplace=True)\n",
-    "data['Date'].max()"
+    "ET.rename(columns={\"date\": \"Date\"}, inplace=True)\n",
+    "ET['Date'].max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9fdafe98-2f20-4f03-9f5c-138b28d7d239",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025-03-27</td>\n",
-       "      <td>18.900</td>\n",
-       "      <td>19.04</td>\n",
-       "      <td>18.7500</td>\n",
-       "      <td>18.88</td>\n",
-       "      <td>9860399.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025-03-26</td>\n",
-       "      <td>18.900</td>\n",
-       "      <td>19.12</td>\n",
-       "      <td>18.8550</td>\n",
-       "      <td>18.93</td>\n",
-       "      <td>10413196.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-03-25</td>\n",
-       "      <td>18.870</td>\n",
-       "      <td>19.13</td>\n",
-       "      <td>18.8100</td>\n",
-       "      <td>18.88</td>\n",
-       "      <td>8733757.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025-03-24</td>\n",
-       "      <td>18.805</td>\n",
-       "      <td>19.11</td>\n",
-       "      <td>18.7729</td>\n",
-       "      <td>18.88</td>\n",
-       "      <td>12855173.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025-03-21</td>\n",
-       "      <td>18.820</td>\n",
-       "      <td>18.82</td>\n",
-       "      <td>18.4500</td>\n",
-       "      <td>18.60</td>\n",
-       "      <td>15140374.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Date    Open   High      Low  Close      Volume\n",
-       "0 2025-03-27  18.900  19.04  18.7500  18.88   9860399.0\n",
-       "1 2025-03-26  18.900  19.12  18.8550  18.93  10413196.0\n",
-       "2 2025-03-25  18.870  19.13  18.8100  18.88   8733757.0\n",
-       "3 2025-03-24  18.805  19.11  18.7729  18.88  12855173.0\n",
-       "4 2025-03-21  18.820  18.82  18.4500  18.60  15140374.0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "7e63e6fc-ab1c-4c8a-aef8-f3be501b7980",
    "metadata": {},
    "outputs": [],
@@ -168,14 +65,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "8e03e2b3-90db-4136-b748-68ab2f9610e0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(datetime.datetime(2025, 3, 27, 0, 0),)"
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f03c321c730>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.register('temp_df', ET)  # Register the DataFrame as a virtual table\n",
+    "con.execute(\"DROP TABLE IF EXISTS ET\")\n",
+    "con.execute(\"CREATE TABLE ET AS SELECT * FROM temp_df\")  # Create the table\n",
+    "con.unregister('temp_df') #unregister the temp table.\n",
+    "\n",
+    "# con.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7158573-cfc7-4bcf-9009-9968725705b8",
+   "metadata": {},
+   "source": [
+    "# BND\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bfb8e88d-5e69-4377-9464-4a400c031f1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2025-03-28 00:00:00')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BND, meta_data = ts.get_daily(symbol='BND', outputsize='full')\n",
+    "# 🔹 Rename columns for clarity\n",
+    "BND.columns = [\"Open\", \"High\", \"Low\", \"Close\", \"Volume\"]\n",
+    "\n",
+    "# 🔹 Convert index to datetime format\n",
+    "BND.index = pd.to_datetime(BND.index)\n",
+    "\n",
+    "# 🔹 Convert index (date) into a regular column\n",
+    "BND.reset_index(inplace=True)\n",
+    "\n",
+    "# Calculate 100-day moving average for Close price\n",
+    "BND[\"100d_MA\"] = BND[\"Close\"].rolling(window=100).mean()\n",
+    "\n",
+    "# 🔹 Rename the date column\n",
+    "BND.rename(columns={\"date\": \"Date\"}, inplace=True)\n",
+    "BND['Date'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d11417d7-f336-4cba-a90e-f3f05bc3d3fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f03c321c730>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.register('temp_df', BND)  # Register the DataFrame as a virtual table\n",
+    "con.execute(\"DROP TABLE IF EXISTS BND\")\n",
+    "con.execute(\"CREATE TABLE BND AS SELECT * FROM temp_df\")  # Create the table\n",
+    "con.unregister('temp_df') #unregister the temp table.\n",
+    "\n",
+    "# con.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7ce5ac1-5668-4b9c-8b3f-cdd944a240a0",
+   "metadata": {},
+   "source": [
+    "# VTI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "87c61e02-024f-4b26-8e3f-a2196180c6f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2025-03-28 00:00:00')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VTI, meta_data = ts.get_daily(symbol='VTI', outputsize='full')\n",
+    "# 🔹 Rename columns for clarity\n",
+    "VTI.columns = [\"Open\", \"High\", \"Low\", \"Close\", \"Volume\"]\n",
+    "\n",
+    "# 🔹 Convert index to datetime format\n",
+    "VTI.index = pd.to_datetime(VTI.index)\n",
+    "\n",
+    "# 🔹 Convert index (date) into a regular column\n",
+    "VTI.reset_index(inplace=True)\n",
+    "\n",
+    "# Calculate 100-day moving average for Close price\n",
+    "VTI[\"100d_MA\"] = VTI[\"Close\"].rolling(window=100).mean()\n",
+    "\n",
+    "# 🔹 Rename the date column\n",
+    "VTI.rename(columns={\"date\": \"Date\"}, inplace=True)\n",
+    "VTI['Date'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6ef16e63-bb40-4d7b-bf01-b92d31d2030f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f03c321c730>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.register('temp_df', VTI)  # Register the DataFrame as a virtual table\n",
+    "con.execute(\"DROP TABLE IF EXISTS VTI\")\n",
+    "con.execute(\"CREATE TABLE VTI AS SELECT * FROM temp_df\")  # Create the table\n",
+    "con.unregister('temp_df') #unregister the temp table.\n",
+    "\n",
+    "# con.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "697315ff-0cb7-4e96-8311-e3fbd780db52",
+   "metadata": {},
+   "source": [
+    "# BNDX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "168ec28e-db3c-462d-be8b-2b9fb8303bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2025-03-28 00:00:00')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BNDX, meta_data = ts.get_daily(symbol='BNDX', outputsize='full')\n",
+    "# 🔹 Rename columns for clarity\n",
+    "BNDX.columns = [\"Open\", \"High\", \"Low\", \"Close\", \"Volume\"]\n",
+    "\n",
+    "# 🔹 Convert index to datetime format\n",
+    "BNDX.index = pd.to_datetime(BNDX.index)\n",
+    "\n",
+    "# 🔹 Convert index (date) into a regular column\n",
+    "BNDX.reset_index(inplace=True)\n",
+    "\n",
+    "# Calculate 100-day moving average for Close price\n",
+    "BNDX[\"100d_MA\"] = BNDX[\"Close\"].rolling(window=100).mean()\n",
+    "\n",
+    "# 🔹 Rename the date column\n",
+    "BNDX.rename(columns={\"date\": \"Date\"}, inplace=True)\n",
+    "BNDX['Date'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7dac8dcf-0910-477b-a53f-66c7ff8e1d7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<duckdb.duckdb.DuckDBPyConnection at 0x7f03c321c730>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.register('temp_df', BNDX)  # Register the DataFrame as a virtual table\n",
+    "con.execute(\"DROP TABLE IF EXISTS BNDX\")\n",
+    "con.execute(\"CREATE TABLE BNDX AS SELECT * FROM temp_df\")  # Create the table\n",
+    "con.unregister('temp_df') #unregister the temp table.\n",
+    "\n",
+    "# con.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a31f7c49-db40-41d3-99ff-1ca016e08580",
+   "metadata": {},
+   "source": [
+    "# VXUS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "21f270ab-9f00-4bbe-8eaf-31b4e829020e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2025-03-28 00:00:00')"
       ]
      },
      "execution_count": 16,
@@ -184,23 +325,46 @@
     }
    ],
    "source": [
-    "con.execute('DROP TABLE IF EXISTS stocks;')\n",
-    "con.register('temp_df', data)  # Register the DataFrame as a virtual table\n",
-    "con.execute(\"CREATE TABLE stocks AS SELECT * FROM temp_df\")  # Create the table\n",
+    "VXUS, meta_data = ts.get_daily(symbol='VXUS', outputsize='full')\n",
+    "# 🔹 Rename columns for clarity\n",
+    "VXUS.columns = [\"Open\", \"High\", \"Low\", \"Close\", \"Volume\"]\n",
+    "\n",
+    "# 🔹 Convert index to datetime format\n",
+    "VXUS.index = pd.to_datetime(VXUS.index)\n",
+    "\n",
+    "# 🔹 Convert index (date) into a regular column\n",
+    "VXUS.reset_index(inplace=True)\n",
+    "\n",
+    "# Calculate 100-day moving average for Close price\n",
+    "VXUS[\"100d_MA\"] = VXUS[\"Close\"].rolling(window=100).mean()\n",
+    "\n",
+    "# 🔹 Rename the date column\n",
+    "VXUS.rename(columns={\"date\": \"Date\"}, inplace=True)\n",
+    "VXUS['Date'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8a1e9143-dfe1-4054-b270-318102eec65d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.register('temp_df', VXUS)  # Register the DataFrame as a virtual table\n",
+    "con.execute(\"DROP TABLE IF EXISTS VXUS\")\n",
+    "con.execute(\"CREATE TABLE VXUS AS SELECT * FROM temp_df\")  # Create the table\n",
     "con.unregister('temp_df') #unregister the temp table.\n",
     "\n",
-    "con.execute('SELECT max(Date) as last_date from stocks;').fetchone()\n"
+    "con.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f332a326-69fd-4a53-89c4-6401a59ce446",
+   "id": "6297f090-b18b-4d03-a535-0ad92e104622",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "con.close()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
